# GORE-Engine

./: .gitignore  ARCHITECTURE_COMPLETE.md  CHARACTERCREATION_COMPLETE.md  CMakeLists.txt  FINAL_ROADMAP.md  FixMapsDirectory.ps1  FixPageFiles.ps1  GORE.sln  GoreConfig.cpp  GoreConfig.h  GoreEngine.cpp  GoreEngine.h  GoreEvent.h  GoreGameState.cpp  GoreGameState.h  GoreLib.vcxproj  GoreLogger.cpp  GoreLogger.h  GoreMain.cpp  GoreMain.h  GoreRenderer.cpp  GoreRenderer.h  GoreResourceManager.cpp  GoreResourceManager.h  GoreScreen.cpp  GoreScreen.h  GoreTexture.cpp  GoreTexture.h  GoreWindow.cpp  GoreWindow.h  IMPLEMENTATION_STATUS.md  MAINMENU_COMPLETE.md  NAMESPACE_FIX_MANUAL.md  QUICKSTART.md  README.md  SETUP_COMPLETE.md  TRANSFORMATION_COMPLETE.md  ULTIMATE_ARCHITECTURE.md  Variables.h  XAML_FIX_GUIDE.md  (+2 more)
GoreLib/: GoreConfig.h  GoreGameState.cpp  GoreGameState.h  GoreLib.cpp  GoreLib.sln  GoreLib.vcxproj  GoreLogger.h  GoreMain.cpp  GoreMain.h  GoreRenderer.cpp  GoreRenderer.h  GoreResourceManager.cpp  GoreResourceManager.h  GoreScreen.h  GoreTexture.cpp  GoreTexture.h  GoreWindow.cpp  GoreWindow.h  framework.h
Legacy/: Bmp.h  Gore.h  History.h  Vga.h  VgaVariables.h
docs/: CreatingWorldMapTexture.md  IMPLEMENTATION_GUIDE.md  Implementation-WorldMap.md  TileMapImplementation.md  WorldMap.md  game.json.template
src/: GORE.Core.csproj  GORE.Core.slnx  GORE.csproj  GORE.csproj.Backup.tmp  SPLASH_SCREEN.md
src/Engine/: GOREEngine.cs
src/GameEngine/: BattleSystem.cs  GameState.cs  InputManager.cs  Mode7Renderer.cs  TileMapRenderer.cs
src/Models/: BattleResult.cs  Character.cs  Enemy.cs  EnemyDatabase.cs  GameConfiguration.cs  Map.cs  Tile.cs  WorldMap.cs
src/Pages/: BaseCharacterCreationPage.cs  BaseGamePage.cs  BaseMainMenuPage.cs  BasePage.cs  CharacterCreationPage.xaml  CharacterCreationPage.xaml.cs  MainMenuPage.xaml  MainMenuPage.xaml.cs
src/Services/: ConfigurationService.cs  GoreEngine.cs  MusicManager.cs  SaveGameManager.cs
src/UI/: BattleResultScreen.xaml  (+10 more)
test/: App.xaml  App.xaml.cs  GORETest.csproj  GORETest.csproj.Backup.tmp  MainWindow.xaml  MainWindow.xaml.cs  README.md  app.manifest  game.json
(+6 files in other folders)
